B Fixed compile error in Boost.Python patches with throw() declarations
B QFileInfo wasn't detecting if a file got deleted during metadata read
B FXFSMonitor wasn't detecting if files vanished between directory scan
and metadata scan
B QMemMap wasn't opening existing shared memory with read ACL access
B Fixed deadlock when creating thread during thread creation upcall

+ Added ability to set external array directly in QMemArray and QByteArray
+ Added own definition of struct timeval to the FX namespace as had been
having consistent problems with it sometimes being defined on Win32 and
other times not :(
* Force inlined FXMtxHold on compilers that support such things
+ Made it possible for FXAtomicInt and FXMutex to be inlineable to all
source files
* Removed locking in various places where it wasn't needed
+ Added FXProcess::getNsCount()
+ Added operator!= to FXHostAddress
- Removed the FXHostAddress::isLoopback() method
+ Added the FXHostAddress::isLocalMachine() method
* Changed FXFont to always specify anti-aliased and cleartype on Win32
* Now replaces system allocator on FreeBSD too
* FXFSMonitor now can disable itself if it detects a broken FAM implementation
R *** Issued snapshot 1
+ Added FXACLEntity::homeDirectory()
+ Added FXDEPRECATED macro
+ Added support for MSVC8.0
+ Added FX::Pol::itRevCompare
* FXSSLKey::setAsymmetricKey() now returns *this
+ Added MSVC project files for libjpeg, libtiff, zlib and placeholder
directories for openssl and libpng
- Removed administrator-only code in FXACL
+ Added Windows x64 capability to build system and fixed loads of 64 bit
warnings
* Modified QPtrVectorIterator to not inherit vector::iterator
* Reimplemented QPtrList::sort() with QValueListQSort (as list::sort()) is
broken on MSVC8)
* Reimplemented Windows version of FXAtomicInt in terms of Interlocked*
intrinsics (as inline assembler not supported on x64). Gives a 17% performance
increase in Tn TestIO due to skipping register dumping around _asm.